syntax = "proto3";

package universities;

option go_package = "proto;universities";

service Universities {
	rpc Call(Request) returns (Response) {}
	rpc Stream(StreamingRequest) returns (stream StreamingResponse) {}
	rpc PingPong(stream Ping) returns (stream Pong) {}
}

message Message {
	string say = 1;
}

message Request {
	string country = 1;
}

message University {
	repeated string web_pages = 1;
	string name = 2;
	repeated string domains = 3;
	string alpha_two_code = 4;
	string country = 5;
	string state_province = 6;
}

message Response {
	repeated University universities = 1;
}

message StreamingRequest {
	int64 count = 1;
}

message StreamingResponse {
	int64 count = 1;
}

message Ping {
	int64 stroke = 1;
}

message Pong {
	int64 stroke = 1;
}
